Improve toc element alignment, boxes landing page search bar appearance, fix toc error on landing page

--- a/jekyll-assets/css/style.css
+++ b/jekyll-assets/css/style.css
@@ -206,6 +206,16 @@ div.subtitle p {
   border: 1px solid var(--accent);
 }
 
+/* boxes page, constrain search bar/theme toggle line to a reasonable size */
+body > .toptitle > #search-theme-toggle-container {
+  width: 50%;
+  margin: auto;
+}
+
+body > .toptitle > #search-theme-toggle-container > #theme-toggle-container {
+  flex-grow: 0;
+}
+
 #docs-container {
   position: relative;
   flex-grow: 1;
@@ -273,6 +283,17 @@ pre {
   flex-direction: row;
   gap: 20px;
   align-items: center;
+  justify-content: center;
+}
+
+#theme-toggle-container {
+  flex-grow: 1;
+  align-self: center;
+  align-items: start;
+}
+
+#docsearch {
+  flex-grow: 1;
 }
 
 #search-theme-toggle-container #theme-toggle-container::after {
@@ -365,7 +386,7 @@ input:checked + li span label div .toc-item::before {
   position: sticky;
   top: 0;
   float: right;
-  height: 200vh; /* push element one page height up so it can (almost) never overlap footer */
+  height: calc(160vh + 1%); /* push element one page height up so it can (almost) never overlap footer */
 }
 
 #on-this-page-inner {
@@ -420,7 +441,7 @@ a.level1 ~ a p {
   padding-bottom: 3px;
   margin-left: 5px;
   margin-right: 5px;
-  width: auto;
+  width: 100%;
 }
 
 a.level2 ~ a p {
@@ -431,7 +452,7 @@ a.level2 ~ a p {
   padding-bottom: 3px;
   margin-left: 15px;
   margin-right: 5px;
-  width: auto;
+  width: 100%;
 }
 
 a.level3 ~ a p {
@@ -442,7 +463,7 @@ a.level3 ~ a p {
   padding-bottom: 3px;
   margin-left: 25px;
   margin-right: 5px;
-  width: auto;
+  width: 100%;
 }
 
 a.level4 ~ a p {
@@ -453,7 +474,7 @@ a.level4 ~ a p {
   padding-bottom: 3px;
   margin-left: 25px;
   margin-right: 5px;
-  width: auto;
+  width: 100%;
 }
 
 a.level1:hover {
@@ -657,7 +678,7 @@ nav#mobile-contents li {
   margin-right: 0px;
   padding-bottom: 10vh;
   padding-right: 0px;
-  padding-left: 10px;
+  padding-left: 19px;
 }
 
 #content h1 {
@@ -1390,6 +1411,12 @@ input:not(:checked) ~ li ~ .itemcontents .sectlevel1 {
   box-shadow: var(--code-bg-colour-transparent) 0px 10px 15px -5px, var(--code-bg-colour-transparent) 0px 10px 10px -5px;
 }
 
+@media screen and (max-width: 1200px) {
+ #content {
+  max-width: 73vw;
+ }
+}
+
 @media screen and (max-width: 1024px) {
   /* docs header always takes up space at page top for mobile screens
   -- anchors should scroll down a little extra to accommodate */
@@ -1405,7 +1432,7 @@ input:not(:checked) ~ li ~ .itemcontents .sectlevel1 {
     overflow: hidden;
   }
 
-    /* when the mobile menu is visible, hide all page content so we don't end up with dueling scrollbars */
+  /* when the mobile menu is visible, hide all page content so we don't end up with dueling scrollbars */
   #mobile-toggle:checked ~ #__rptl-header {
     display: none;
   }
@@ -1508,7 +1535,7 @@ input:not(:checked) ~ li ~ .itemcontents .sectlevel1 {
   }
 
   #docsearch {
-    flex-grow: 1;
+    flex-grow: 3;
   }
 
   #__rptl-header {
